prevent highstock chart from collapsing

--- a/src/app/highstock/highstock.component.scss
+++ b/src/app/highstock/highstock.component.scss
@@ -4,7 +4,6 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 3px rgba(0,0,0,0.15);
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 3px rgba(0,0,0,0.15);
     -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.15), 0 1px 3px rgba(0,0,0,0.15);
-    padding: 1% 0;
 
     .highcharts-background {
         fill: $chart-background;
