--- a/src/app/single-series/single-series.component.scss
+++ b/src/app/single-series/single-series.component.scss
@@ -92,10 +92,7 @@
   }
 
   .series-table {
-    box-shadow: 0 1px 1px rgba(0,0,0,0.15), 0 1px 1px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15), 0 1px 1px rgba(0,0,0,0.15);
-    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15), 0 1px 1px rgba(0,0,0,0.15);
-  
+      
     th, td {
       text-align: right;
       font-family: 'Lucida Sans', sans-serif;
@@ -121,6 +118,10 @@
       border-bottom-color: transparent;
       border-left: 1px solid #E5E5E5;
       border-right: 1px solid #E5E5E5;
+    }
+
+    tr:last-child {
+      border-bottom: 1px solid #E5E5E5;
     }
   }
 }
